project/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: front-end-route
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - front-end.info
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: front-end
          port: 8081

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: broker-service-route
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - broker-service.info
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: broker-service
          port: 8080
